server-backups/sq.pathrocknetwork.org/iptables.v4
# Generated by iptables-save v1.8.7 on Sat Dec  9 03:47:56 2023
*filter
:INPUT ACCEPT [2334060:286392309]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -p tcp -m tcp --dport 5552 -j ACCEPT
-A INPUT -s 168.119.212.48/32 -p tcp -m tcp --dport 5552 -j ACCEPT
-A INPUT -s 168.119.212.48/32 -j ACCEPT
-A INPUT -s 68.119.212.48/32 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 37.24.110.30/32 -j ACCEPT
-A INPUT -s 5.161.49.184/32 -m comment --comment "ImStaked IP" -j ACCEPT
-A INPUT -s 91.107.210.23/32 -p tcp -m multiport --ports 9100,10080,9615,9616 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED,DNAT -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22100 -m comment --comment "SSH " -j ACCEPT
-A INPUT -p tcp -m multiport --ports 30333,30334,9933 -m comment --comment Astar -j ACCEPT
-A INPUT -p tcp -m multiport --ports 6535,6060 -m comment --comment Arthera -j ACCEPT
-A INPUT -p tcp -m multiport --ports 123,53,5353 -j ACCEPT
-A INPUT -p tcp -m multiport --ports 53 -j ACCEPT
-A INPUT -d 141.95.97.30/32 -p tcp -m tcp --dport 8010 -j DROP
-A INPUT -m set --match-set whitelist src -j ACCEPT
-A INPUT -d 141.95.97.30/32 -p tcp -m tcp --dport 5432 -j DROP
-A INPUT -p tcp -m tcp --dport 10080 -j DROP
-A INPUT -d 141.95.97.30/32 -p tcp -m multiport --ports 9100,10080 -m comment --comment "Metrics Ports" -j DROP
-A INPUT -d 141.95.97.30/32 -p tcp -m multiport --ports 8000,8010 -m comment --comment "Subquery Admin Ports" -j DROP
-A INPUT -d 141.95.97.30/32 -p tcp -m multiport --ports 9100,10080,9615,9616 -m comment --comment "Metrics Ports" -j DROP
-A INPUT -p tcp -m tcp --dport 8011 -j DROP
-A FORWARD -s 37.24.110.30/32 -j ACCEPT
-A FORWARD -s 5.161.49.184/32 -j ACCEPT
-A FORWARD -i eno1 -p tcp -m tcp --dport 8000 -j DROP
-A FORWARD -i eno1 -p tcp -m tcp --dport 8010 -j DROP
-A FORWARD -s 168.119.212.48/32 -m conntrack --ctstate NEW,RELATED,ESTABLISHED,UNTRACKED,DNAT -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 5552 -j ACCEPT
-A FORWARD -s 168.119.212.48/32 -j ACCEPT
-A FORWARD -s 168.119.212.48/32 -j ACCEPT
-A FORWARD -s 68.119.212.48/32 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-8f953bccba4a -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-8f953bccba4a -j DOCKER
-A FORWARD -i br-8f953bccba4a ! -o br-8f953bccba4a -j ACCEPT
-A FORWARD -i br-8f953bccba4a -o br-8f953bccba4a -j ACCEPT
-A FORWARD -o br-697e7b6666f1 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-697e7b6666f1 -j DOCKER
-A FORWARD -i br-697e7b6666f1 ! -o br-697e7b6666f1 -j ACCEPT
-A FORWARD -i br-697e7b6666f1 -o br-697e7b6666f1 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED,DNAT -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A OUTPUT -j ACCEPT
-A DOCKER -s 168.119.212.48/32 -j ACCEPT
-A DOCKER -s 168.119.212.48/32 -j ACCEPT
-A DOCKER -s 68.119.212.48/32 -j ACCEPT
-A DOCKER -d 172.21.0.2/32 ! -i br-8f953bccba4a -o br-8f953bccba4a -p tcp -m tcp --dport 8000 -j ACCEPT
-A DOCKER -d 172.21.0.4/32 ! -i br-8f953bccba4a -o br-8f953bccba4a -p udp -m udp --dport 7370 -j ACCEPT
-A DOCKER -d 172.21.0.4/32 ! -i br-8f953bccba4a -o br-8f953bccba4a -p tcp -m tcp --dport 1080 -j ACCEPT
-A DOCKER -s 168.119.212.48/32 -m conntrack --ctstate NEW,RELATED,ESTABLISHED,UNTRACKED,DNAT -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-8f953bccba4a ! -o br-8f953bccba4a -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-8f953bccba4a -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Sat Dec  9 03:47:56 2023
# Generated by iptables-save v1.8.7 on Sat Dec  9 03:47:56 2023
*nat
:PREROUTING ACCEPT [10289309:602461120]
:INPUT ACCEPT [3765987:210599915]
:OUTPUT ACCEPT [5984628:365121651]
:POSTROUTING ACCEPT [8279589:503222325]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.21.0.0/16 ! -o br-8f953bccba4a -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-697e7b6666f1 -j MASQUERADE
-A POSTROUTING -s 172.21.0.6/32 -d 172.21.0.6/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.21.0.6/32 -d 172.21.0.6/32 -p tcp -m tcp --dport 5001 -j MASQUERADE
-A POSTROUTING -s 172.21.0.6/32 -d 172.21.0.6/32 -p tcp -m tcp --dport 4001 -j MASQUERADE
-A POSTROUTING -s 172.21.0.6/32 -d 172.21.0.6/32 -p udp -m udp --dport 4001 -j MASQUERADE
-A POSTROUTING -s 172.21.0.5/32 -d 172.21.0.5/32 -p tcp -m tcp --dport 8000 -j MASQUERADE
-A POSTROUTING -s 172.21.0.2/32 -d 172.21.0.2/32 -p tcp -m tcp --dport 8000 -j MASQUERADE
-A POSTROUTING -s 172.21.0.4/32 -d 172.21.0.4/32 -p udp -m udp --dport 7370 -j MASQUERADE
-A POSTROUTING -s 172.21.0.4/32 -d 172.21.0.4/32 -p tcp -m tcp --dport 1080 -j MASQUERADE
-A DOCKER -p tcp -m tcp --dport 5552 -j RETURN
-A DOCKER -s 168.119.212.48/32 -j ACCEPT
-A DOCKER -s 68.119.212.48/32 -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-8f953bccba4a -j RETURN
-A DOCKER ! -i br-8f953bccba4a -p tcp -m tcp --dport 8000 -j DNAT --to-destination 172.21.0.2:8000
-A DOCKER ! -i br-8f953bccba4a -p udp -m udp --dport 7370 -j DNAT --to-destination 172.21.0.4:7370
-A DOCKER ! -i br-8f953bccba4a -p tcp -m tcp --dport 1080 -j DNAT --to-destination 172.21.0.4:1080
COMMIT
# Completed on Sat Dec  9 03:47:56 2023
