server-backups/sq.pathrocknetwork.org/iptables.v6
# Generated by ip6tables-save v1.8.7 on Sat Dec  9 03:48:07 2023
*filter
:INPUT DROP [355882:28345137]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m tcp --dport 30334 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 30333 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED,DNAT -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22100 -m comment --comment "SSH " -j ACCEPT
-A INPUT -p tcp -m multiport --ports 6060,6535 -m comment --comment "Arthera Node" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 30333,30334,9933 -m comment --comment "ASTAR RPC" -j ACCEPT
-A INPUT -p udp -m multiport --ports 53,123,5353 -m comment --comment "DNS/NTP/MDNS" -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED,DNAT -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A OUTPUT -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED,DNAT -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A OUTPUT -j ACCEPT
COMMIT
# Completed on Sat Dec  9 03:48:07 2023
